--- a/public/css/home.css
+++ b/public/css/home.css
@@ -180,6 +180,20 @@ textarea {
 	margin-right: 50px;
 }
 
+.screen {
+	text-align: center;
+	border: solid;
+	border-color: #262c32;
+	border-radius: 10px;
+	background-color: #36393f;
+	margin-right: 50px;
+}
+
+.longScreen {
+	max-width: 400px;
+	margin: 30px 50px 30px 0px;
+}
+
 .contact {
 	min-width: 150px;
 	max-width: 550px;
