--- a/public/css/home.css
+++ b/public/css/home.css
@@ -196,12 +196,14 @@ textarea {
 
 .question {
 	min-width: 150px;
+	height: 100%;
 	max-width: 250px;
 	margin-right: 50px;
 }
 
 .Bigquestion {
 	min-width: 150px;
+	height: 100%;
 	max-width: 400px;
 	margin-right: 50px;
 }
@@ -252,6 +254,7 @@ textarea {
 }
 
 .logo img {
+	height: 100%;
 	max-width: 200px;
 }
 
