deleted style in html #199

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -461,6 +461,14 @@ textarea {
 	color: #23272a;
 }
 
+.buttonJoin {
+	margin-top: 24px;
+}
+
+.paddingWave {
+	padding-bottom: 150px;
+}
+
 .buttonWhite:hover {
 	color: #2b67a6;
 }
