--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,6 +38,12 @@
 	list-style-type: none;
 }
 
+h1 {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font-weight: normal;
+}
 var {
 	font-style: normal;
 }
