--- a/public/css/home.css
+++ b/public/css/home.css
@@ -203,12 +203,15 @@ textarea {
 .question {
 	min-width: 150px;
 	max-width: 250px;
+	min-height: 150px;
+	max-height: 250px;
 	margin-right: 50px;
 }
 
 .Bigquestion {
 	min-width: 150px;
 	max-width: 400px;
+	max-height: 515px;
 	margin-right: 50px;
 }
 
